# mav_tube_trajectory_generation

./: .gitignore  CMakeLists.txt
IGNORE/: io.cpp  io.h  polynomial_optimization_nonlinear.h  polynomial_optimization_nonlinear_impl.h  trajectory_sampling.cpp  trajectory_sampling.h
cmake/: FindMosek.cmake
include/mav_tube_trajectory_generation/: control_points.h  convolution.h  extremum.h  motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_linear_constrained.h  polynomial_optimization_nonlinear.h  polynomial_optimization_qcqp.h  segment.h  test_utils.h  timing.h  trajectory.h  trajectory_sampling.h  vertex.h
include/mav_tube_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h  polynomial_optimization_qcqp_impl.h
include/mav_tube_trajectory_generation/mav_msgs/: common.h  eigen_mav_msgs.h
include/mav_tube_trajectory_generation/rpoly/: rpoly_ak1.h
src/: main.cpp  motion_defines.cpp  polynomial.cpp  polynomial_timing_evaluation.cpp  segment.cpp  timing.cpp  trajectory.cpp  trajectory_sampling.cpp  vertex.cpp
src/rpoly/: rpoly_ak1.cpp
